--- a/apps/marketing/src/app.css
+++ b/apps/marketing/src/app.css
@@ -1,1 +1,12 @@
 @import 'tailwindcss';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Reset margins */
+body,
+html {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
